@@ -114,6 +114,9 @@ module ActionController
       #
       #  # Tests a route, providing a defaults hash
       #  assert_routing 'controller/action/9', {:id => "9", :item => "square"}, {:controller => "controller", :action => "action"}, {}, {:item => "square"}
+      #
+      #  # Tests a route with a HTTP method
+      #  assert_routing({ :method => 'put', :path => '/product/321' }, { :controller => "product", :action => "update", :id => "321" })
       def assert_routing(path, options, defaults={}, extras={}, message=nil)
         assert_recognizes(options, path, extras, message)
         
@@ -122,7 +125,7 @@ module ActionController
           options[:controller] = "/#{controller}"
         end
          
-        assert_generates(path, options, defaults, extras, message)
+        assert_generates(path.is_a?(Hash) ? path[:path] : path, options, defaults, extras, message)
       end
 
       private
